@@ -3,6 +3,16 @@ Package: startup
 
 Version: 0.13.0-9000 [2019-12-03]
 
+NEW FEATURES:
+
+ * Setting environment variable 'R_STARTUP_RDATA' to "remove" will cause an
+   existing './.RData' file to be skipped by automatically removing it.
+   If "rename", it will be renamed to './.RData-YYYYMMDD_hhmmss' where the
+   timestamp is the last time the file was modified.  If "prompt", then the
+   user is prompted whether they want to load the file or rename it.  Thus,
+   setting 'R_STARTUP_RDATA=rename' in an .Renviron file will make sure no
+   .RData file is ever loaded while still preserving them.
+
 BUG FIXES:
 
  * startup(all = TRUE) would process startup folders in the current working
